// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="sc-gemMas bkjQrx"
  size="medium"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Loader renders with different colours 1`] = `
Array [
  <div
    className="sc-gemMas bkjQrx"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-gemMas fEKnRF"
    color="dodoria.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-gemMas jtCNhp"
    color="trunks.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-gemMas jNDvsZ"
    color="raditz.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
]
`;

exports[`Loader renders with sizes 1`] = `
Array [
  <div
    className="sc-gemMas fxSHiQ"
    size="twoxsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-gemMas kPCzEs"
    size="xsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-gemMas gkEeNo"
    size="small"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-gemMas bkjQrx"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-gemMas kfnGeB"
    size="large"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
]
`;
